# paprika

./: Cargo.toml  LICENSE  README.md
examples/: example.rs  get_value.rs
src/: app.rs  lib.rs  main.rs  ops.rs  parser.rs
